# hexter

./: AUTHORS  ChangeLog  Makefile.am  README  README.rst  TODO  aclocal.m4  autogen.sh  config.h.ac  configure.ac
extra/: default_patches.dx7  dx7_roms.dx7  fb01_roms_converted_12.dx7  fb01_roms_converted_34.dx7  fb01_roms_converted_5.dx7  textui_callbacks.c  textui_callbacks.h  textui_main.c  tx7_roms.dx7  tx_edit.c
fptest/: Makefile  harness.c  wrapper.h
src/: Makefile.am  bitmap_about.xbm  bitmap_about.xpm  dx7_voice.c  dx7_voice.h  dx7_voice_data.c  dx7_voice_data.h  dx7_voice_patches.c  dx7_voice_render.c  dx7_voice_tables.c  gui_callbacks.c  gui_callbacks.h  gui_data.c  gui_data.h  gui_images.c  gui_images.h  gui_interface.c  gui_interface.h  gui_main.c  gui_main.h  gui_midi.c  gui_midi.h  gui_patch_edit.c  gui_patch_edit.h  gui_retro_console.c  gui_retro_console.h  gui_retro_editor.c  gui_widgy_alg.c  gui_widgy_editor.c  hexter.c  hexter.h  hexter_synth.c  hexter_synth.h  hexter_types.h
