## Process this file with automake to produce Makefile.in

SUBDIRS = src

EXTRA_DIST = \
	autogen.sh \
	extra/tx_edit.c \
	extra/default_patches.dx7 \
	extra/dx7_roms.dx7 \
	extra/fb01_roms_converted_12.dx7 \
	extra/fb01_roms_converted_34.dx7 \
	extra/fb01_roms_converted_5.dx7 \
	extra/tx7_roms.dx7

dist_pkgdata_DATA = extra/dx7_roms.dx7 \
	extra/fb01_roms_converted_12.dx7 \
	extra/fb01_roms_converted_34.dx7 \
	extra/fb01_roms_converted_5.dx7 \
	extra/tx7_roms.dx7

AUTOMAKE_OPTIONS = foreign

